@@ -17,7 +17,7 @@ You'll need to have these libraries and their development headers to build Wesno
  boost_system >= 1.36.0
  boost_thread >= 1.36.0
  libfontconfig >= 2.4.1
- libpango (with cairo backend) >= 1.24.4
+ libpango (with cairo backend) >= 1.21.3
  libsdl >= 1.2.7
  libsdl-image >= 1.2 (with png support)
  libsdl-mixer >= 1.2 (with Vorbis support)
