@@ -28,6 +28,7 @@ Version 1.11.4+dev:
    * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
      in alphabetical order
    * Added -Wno-null-conversion to the CMake pedantic flags.
+   * Changed: Decreased the pango cairo dependency to version 1.21.3.
 
 Version 1.11.4:
  * AI:
